--- a/WebShope.Service/WebShope.Service.csproj
+++ b/WebShope.Service/WebShope.Service.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WebShope.DAL\WebShope.DAL.csproj" />
     <ProjectReference Include="..\WebShope.Domain\WebShope.Domain.csproj" />
   </ItemGroup>
 
