--- a/WebShope/WebShope.csproj
+++ b/WebShope/WebShope.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WebShope.DAL\WebShope.DAL.csproj" />
-    <ProjectReference Include="..\WebShope.Domain\WebShope.Domain.csproj" />
+    <ProjectReference Include="..\WebShope.Service\WebShope.Service.csproj" />
   </ItemGroup>
 
 </Project>
