new controllerr, views and service

--- a/WebShope/appsettings.json
+++ b/WebShope/appsettings.json
@@ -2,6 +2,11 @@
     "ConnectionStrings": {
         "FirstConnectionString": "Server=localhost;Database=SiteDataBase;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
     },
+    "CloudinarySettings": {
+        "Cloud": "dyl9yk2bb",
+        "ApiKey": "673684465437169",
+        "ApiSecret": "V6ZjSeBqCtOE8ulDBsgJ_jhgAqo"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
