--- a/WebShope/Properties/launchSettings.json
+++ b/WebShope/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:30571",
-      "sslPort": 44345
+      "applicationUrl": "http://localhost:43073",
+      "sslPort": 44391
     }
   },
   "profiles": {
-    "WebShope": {
+    "WebShop": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7137;http://localhost:5137",
+      "applicationUrl": "https://localhost:7064;http://localhost:5109",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
